force-app/main/default/objects/RMS_Setting__c/RMS_Setting__c.object-meta.xml
<CustomObject>
    <description>Configurable Retention Management System settings for DHS ForeSite.</description>
    <label>RMS Setting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>