force-app/main/default/objects/RMS_Setting__c/fields/Acknowledgment_Statement__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Statement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acknowledgment Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>