force-app/main/default/objects/RMS_Setting__c/fields/FedEx_Status__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FedEx Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>