force-app/main/default/objects/RMS_Setting__c/fields/Follow_Up_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Window_Days__c</fullName>
    <label>Follow Up Window Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>