force-app/main/default/objects/RMS_Setting__c/fields/Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>Notification_Template__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Notification Template</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>