force-app/main/default/objects/RMS_Setting__c/fields/Return_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Return Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>