force-app/main/default/objects/RMS_Setting__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule Day</label>
    <length>40</length>
    <type>Text</type>
</CustomField>