force-app/main/default/objects/RMS_Setting__c/fields/Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Frequency__c</fullName>
    <label>Schedule Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>