force-app/main/default/objects/RMS_Setting__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>